# tema-paoo

./: CMakeLists.txt  tema1.cpp
Student/: Student.cpp
src/: CMakeLists.txt  Student.cpp  Student.h  main.cpp  my_program
src/lib/: AnotherStudent.cpp  CMakeLists.txt  IStudent.h  PostgraduateStudent.cpp  PostgraduateStudent.h  Student.cpp  Student.h  UndergraduateStudent.cpp  UndergraduateStudent.h
src/lib/StudentDetails/: StudentDetails.cpp  StudentDetails.h
