add_library(
    StudentLib STATIC Student.cpp 
                      UndergraduateStudent.cpp 
                      PostgraduateStudent.cpp 
                      UndergraduateStudent.h 
                      PostgraduateStudent.h 
                      StudentDetails/StudentDetails.h
                      StudentDetails/StudentDetails.cpp)
